re PR c++/29175 (ICE on invalid C++ variable length array)

PR c++/29175
	* decl.c (check_initializer): Issue errors about trying to
	initialize arrays whose elements have variable size.
	PR c++/29175
	* g++.dg/init/array24.C: New test.

From-SVN: r117658